deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aymenmosrati
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx
          name: nginx
          resources:
            requests:
              memory: 200Mi
              cpu: 0.25
            limits:
              memory: 300Mi
              cpu: 0.5
